--- a/index.html
+++ b/index.html
@@ -2,12 +2,25 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="./public/favicon.ico" />
+    <link rel="stylesheet" href="./css/styles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>paint-clone</title>
+    <title>Paint PowerUp</title>
   </head>
   <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
+    
+    <div class="drawing-app">
+      <aside class="toolbar">
+
+      </aside>
+
+      <main class="canvas-area">
+          <canvas id="drawing-canvas"></canvas>
+      </main>
+
+
+    </div>
+
+    <script type="module" src="/js/app.js"></script>
   </body>
 </html>
