--- a/index.html
+++ b/index.html
@@ -56,6 +56,6 @@
 
     </div>
 
-    <script type="module" src="/js/app.js"></script>
+    <script type="module" src="/src/main.js"></script>
   </body>
 </html>
