--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <h2>Color</h2>
         <input type="color" id="color-picker" value="#000000" />
         <h2>Brush Size</h2>
-        <input type="range" id="brush-size" min="1" max="20" value="50" />
+        <input type="range" id="brush-size" min="1" max="20" step="0.2" value="10" />
         <h2>Actions</h2>
         <button id="clear-button" class="action-button">
           <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
