feat: user can save the canva as png

--- a/index.html
+++ b/index.html
@@ -44,8 +44,25 @@
             <path d="M16.2162 9.38892L11.0053 14.5998" stroke="currentColor" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"/>
             <path d="M11.0052 9.40015L16.2162 14.6111" stroke="currentColor" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"/>
             <path d="M21.25 12V15.3808C21.25 16.2774 20.8938 17.1373 20.2598 17.7713C19.6258 18.4054 18.7659 18.7616 17.8692 18.7616H8.6622C7.76586 18.7608 6.90652 18.4041 6.27311 17.7699L3.21913 13.6002C2.91282 13.1227 2.75 12.5673 2.75 12C2.75 11.4327 2.91282 10.8773 3.21913 10.3997L6.27311 6.2301C6.90652 5.5959 7.76586 5.23919 8.6622 5.2384H17.8692C18.7659 5.2384 19.6258 5.59459 20.2598 6.22861C20.8938 6.86263 21.25 7.72255 21.25 8.61919V12Z" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+          </svg>
+          Clear
+        </button>
+        <button id="save-button" class="action-button">
+          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M21.25 9.1596V17.1466C21.25 18.2349 20.817 19.2786 20.0462 20.0481C19.2754 20.8177 18.23 21.25 17.14 21.25H6.86C5.76996 21.25 4.72457 20.8177 3.95379 20.0481C3.18302 19.2786 2.75 18.2349 2.75 17.1466V6.85334C2.75 5.76507 3.18302 4.72137 3.95379 3.95184C4.72457 3.18232 5.76996 2.75 6.86 2.75H15.21C15.6344 2.74804 16.0545 2.83601 16.4423 3.00812C16.8302 3.18022 17.177 3.43253 17.46 3.74838L20.46 7.16284C20.9614 7.7081 21.2429 8.41942 21.25 9.1596Z" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+            <path d="M7 21.22V15.9785C7 15.4489 7.21071 14.9411 7.58579 14.5666C7.96086 14.1921 8.46957 13.9818 9 13.9818H15C15.5304 13.9818 16.0391 14.1921 16.4142 14.5666C16.7893 14.9411 17 15.4489 17 15.9785V21.22" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+            <path d="M15.8 2.8099V6.99311C15.8 7.39651 15.6402 7.78354 15.3554 8.06972C15.0707 8.3559 14.6841 8.518 14.28 8.52063H9.72001C9.31597 8.518 8.92937 8.3559 8.6446 8.06972C8.35983 7.78354 8.2 7.39651 8.20001 6.99311V2.75" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+            <path d="M10.1461 17.8578H13.8539" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
         </svg>
-        Clear
+          Save
+        </button>
+        <button id="print-button" class="action-button">
+          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M16.625 14.3125H7.375C6.73642 14.3125 6.21875 14.8302 6.21875 15.4688V20.0938C6.21875 20.7323 6.73642 21.25 7.375 21.25H16.625C17.2636 21.25 17.7812 20.7323 17.7812 20.0938V15.4688C17.7812 14.8302 17.2636 14.3125 16.625 14.3125Z" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+            <path d="M17.7812 17.7812H20.0938C20.4004 17.7812 20.6945 17.6594 20.9113 17.4426C21.1282 17.2258 21.25 16.9317 21.25 16.625V10.8438C21.25 10.2304 21.0064 9.64224 20.5727 9.20857C20.139 8.77489 19.5508 8.53125 18.9375 8.53125H5.0625C4.44919 8.53125 3.86099 8.77489 3.42732 9.20857C2.99364 9.64224 2.75 10.2304 2.75 10.8438V16.625C2.75 16.9317 2.87182 17.2258 3.08866 17.4426C3.3055 17.6594 3.59959 17.7812 3.90625 17.7812H6.21875" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+            <path d="M16.625 8.53125V3.90625C16.625 3.59959 16.5032 3.3055 16.2863 3.08866C16.0695 2.87182 15.7754 2.75 15.4688 2.75H8.53125C8.22459 2.75 7.9305 2.87182 7.71366 3.08866C7.49682 3.3055 7.375 3.59959 7.375 3.90625V8.53125" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+          </svg>
+          Print
         </button>
       </aside>
 
