feat: user can print image

--- a/index.html
+++ b/index.html
@@ -70,7 +70,10 @@
           <canvas id="drawing-canvas"></canvas>
       </main>
 
+    </div>
 
+    <div id="print-overlay">
+      <img id="print-image" />
     </div>
 
     <script type="module" src="/src/main.js"></script>
